add tests and logs and exception
