# src/main/java/com/company/readingIsGood/customer/CustomerController.java
@@ -4,11 +4,8 @@ import com.company.readingIsGood.customer.service.CustomerService;
 import com.company.readingIsGood.order.model.Order;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -25,9 +22,9 @@ public class CustomerController {
         customerService.saveCustomer(customer);
     }
 
-    @GetMapping(path = "/customer")
+    @GetMapping(path = "/customer/order/{customerId}")
     public List<Order> getOrdersByCustomerId(
-            @RequestParam long customerId,
+            @PathVariable long customerId,
             @PageableDefault(size = 20) Pageable pageable)
     {
         return customerService.getOrdersByCustomerId(customerId, pageable);
